--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -21,6 +21,7 @@ http://www.tooplate.com/view/2089-meteor
         <link rel="stylesheet" href="{% static 'css/fontAwesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/hero-slider.css' %}">
         <link rel="stylesheet" href="{% static 'css/tooplate-style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/consulta.css' %}">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
@@ -76,7 +77,30 @@ http://www.tooplate.com/view/2089-meteor
                         <h4>Cirujano</h4>
                         <p>Phasellus interdum tortor sem. Quisque sit amet condimentum sem. Phasellus luctus, felis sit amet pulvinar luctus.</p>
                         <div class="primary-button">
-                            <a href="#" class="scroll-link" data-id="about">Pedir cita</a> <a href="#" class="scroll-link" data-id="about">Enviar mensaje</a>
+                            
+                            <a href="#" id="myBtn" class="scroll-link" data-id="about">Pedir cita</a>
+                            <a href="#" class="scroll-link" data-id="about">Enviar mensaje</a>
+                            <!-- POP UP -->
+
+                            <div id="myModal" class="modal">
+
+                              <!-- Modal content -->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <span class="close">&times;</span>
+                                  <h2>Modal Header</h2>
+                                </div>
+                                <div class="modal-body">
+                                  <p>Some text in the Modal Body</p>
+                                  <p>Some other text...</p>
+                                </div>
+                                <div class="modal-footer">
+                                  <h3>Modal Footer</h3>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- FIN POP UP -->
+                            
                         </div>
                     </div>
                 </div> <!-- .cd-full-width -->
@@ -201,7 +225,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_01.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_01.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_01.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -211,7 +235,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_02.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_02.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_02.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -221,7 +245,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_03.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_03.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_03.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -231,7 +255,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_04.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_04.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_04.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -241,7 +265,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_05.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_05.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_05.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -251,7 +275,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_06.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_06.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_06.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -261,7 +285,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_07.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="{% static 'img/portfolio_big_07.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_07.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -271,7 +295,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="{% static 'img/portfolio_08.jpg' %}">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_08.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="{% static 'img/portfolio_big_08.jpg'%}" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
@@ -469,6 +493,7 @@ http://www.tooplate.com/view/2089-meteor
 
     <script src="{% static 'js/plugins.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/consulta.js' %}"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
