--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Meteor HTML CSS Template</title>
+        <title>Dr. Jaramillo Vasquez</title>
 <!--
 
 Template 2089 Meteor
@@ -15,7 +15,7 @@ http://www.tooplate.com/view/2089-meteor
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+        <link href="{% static './img/favicon.png' %}" rel='shortcut icon' type='image/png'/>
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/fontAwesome.css' %}">
@@ -77,7 +77,7 @@ http://www.tooplate.com/view/2089-meteor
                         <h4>Cirujano</h4>
                         <p>Phasellus interdum tortor sem. Quisque sit amet condimentum sem. Phasellus luctus, felis sit amet pulvinar luctus.</p>
                         <div class="primary-button">
-                            
+
                             <a href="#" id="myBtn" class="scroll-link" data-id="about">Pedir cita</a>
                             <a href="#" class="scroll-link" data-id="about">Enviar mensaje</a>
                             <!-- POP UP -->
@@ -100,7 +100,7 @@ http://www.tooplate.com/view/2089-meteor
                               </div>
                             </div>
                             <!-- FIN POP UP -->
-                            
+
                         </div>
                     </div>
                 </div> <!-- .cd-full-width -->
